# envoluntary

./: Cargo.toml  LICENSE  README.md  devshell.toml  flake.nix
.github/workflows/: nix.yaml
cli/: Cargo.toml
cli/src/: opt.rs  shell.rs
env-hooks/: Cargo.toml  README.md
env-hooks/src/: lib.rs  state.rs
env-hooks/tests/: state.rs
nix-dev-env/: Cargo.toml  README.md
nix-dev-env/src/: nix_command.rs  nix_profile_cache.rs  nix_version_check.rs
src/: cache.rs  main.rs  nix_profile_cache.rs  util.rs  watches.rs
src/cache/: versions.rs
