[package]
name = "envoluntary"
version = "0.1.0"
edition = "2024"
description = "Automatic Nix development environments for your shell"
license = "MIT"

[dependencies]
anyhow.workspace = true
base64 = "0.22.1"
bstr.workspace = true
clap.workspace = true
config = "0.15.18"
duct.workspace = true
env-hooks = { path = "../env-hooks", version = "0.1.0" }
nix-dev-env = { path = "../nix-dev-env", version = "0.1.0" }
once_cell.workspace = true
regex.workspace = true
ruzstd = "0.8.1"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_regex = "1.1.0"
sha1.workspace = true
shell-quote.workspace = true
toml = "0.9.8"
