[package]
name = "env-hooks"
version = "0.1.0"
edition = "2024"
description = "Shell integration for automatic environment management"
license = "MIT"

[dependencies]
anyhow.workspace = true
bstr.workspace = true
duct.workspace = true
indexmap.workspace = true
once_cell.workspace = true
serde_json.workspace = true
shell-quote.workspace = true
tempfile.workspace = true
